最近はシングルクォートアンチなんです

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,10 @@
         "no-unneeded-ternary": "warn",
         "quotes": [
             "warn",
-            "single"
+            "double",
+            {
+                "avoidEscape": true
+            }
         ],
         "space-before-function-paren": [
             "warn",
