--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "iconv-lite": "^0.6.3",
     "jschardet": "^3.1.4",
     "minimatch": "^10.0.1"
+  },
+  "volta": {
+    "node": "22.11.0"
   }
 }
