--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "Creative Commons Zero",
   "private": true,
   "scripts": {
-    "test": "ts-node src/index.ts",
+    "gen": "ts-node src/index.ts",
     "lint": "eslint src"
   },
   "devDependencies": {
